Keyframes not applied when using Auto Keying with certain Gizmos (camera, forcefield, lamp, ...) #70273

Closed
opened 2019-09-26 12:51:41 +02:00 by Michael Hermann · 10 comments

System Information
Operating system: Linux-5.3.0-arch1-1-ARCH-x86_64-with-arch-Arch-Linux 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: ee47075449
Worked: (optional)

Short description of error
Moving the Gizmo for Focal Length doesn't trigger a New Keyframe.

Exact steps for others to reproduce the error

  • Add Camera
  • Turn on Limits in the Camera Settings
  • Set a keyframe for the Focal Length of the Camera
  • Turn on Auto Keying
  • Change to a different frame
  • Move the Gizmo and check if a keyframe is added.
**System Information** Operating system: Linux-5.3.0-arch1-1-ARCH-x86_64-with-arch-Arch-Linux 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: `ee47075449` Worked: (optional) **Short description of error** Moving the Gizmo for Focal Length doesn't trigger a New Keyframe. **Exact steps for others to reproduce the error** - Add Camera - Turn on Limits in the Camera Settings - Set a keyframe for the Focal Length of the Camera - Turn on Auto Keying - Change to a different frame - Move the Gizmo and check if a keyframe is added.

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member
[auto_keyframe_bug.blend](https://archive.blender.org/developer/F7777130/auto_keyframe_bug.blend)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

True for other gizmos as well (e.g. forcefield, lamp)

True for other gizmos as well (e.g. forcefield, lamp)
Philipp Oeser changed title from Keyframes not applied when using Auto Keying and the Viewport Gizmo for Focal Length to Keyframes not applied when using Auto Keying with certain Gizmos (camera, forcefield, lamp, ...) 2019-11-20 15:33:03 +01:00
Sybren A. Stüvel self-assigned this 2019-12-20 10:46:19 +01:00
Sybren A. Stüvel removed their assignment 2019-12-20 12:36:39 +01:00
Campbell Barton was assigned by Sybren A. Stüvel 2019-12-20 12:36:39 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Assigning to Campbell as this seems to be an issue with the gizmo design.

Assigning to Campbell as this seems to be an issue with the gizmo design.
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 13:49:15 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 1e0b790364

This issue was referenced by 1e0b7903649f69295d1b842d05e015676098ac12

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-01-14 07:13:00 +01:00
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#70273
No description provided.