Fix T70273: Auto-keyframe ignored by gizmos